# rsvm

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain
.cargo/: config.toml
lib/rsvm_zip/: Cargo.toml
lib/rsvm_zip/src/: lib.rs
src/: global.rs  handle.rs  interpreter.rs  lib.rs  os.rs  rava.rs  shared.rs  test.rs  thread.rs  value.rs  vm.rs
src/classfile/: class_info.rs  class_loader.rs  descriptor.rs  mod.rs  parser.rs  reader.rs
src/gc/: copying.rs  mod.rs
src/memory/: heap.rs  lab.rs  mod.rs  space.rs
src/native/: builtin_natives.rs  java_io_FileDescriptor.rs  java_io_FileInputStream.rs  java_io_FileOutputStream.rs  java_io_FileSystem.rs  java_io_UnixFileSystem.rs  java_io_Win32FileSystem.rs  java_io_WinNTFileSystem.rs  java_lang_Class.rs  java_lang_ClassLoader.rs  java_lang_Double.rs  java_lang_Float.rs  java_lang_Object.rs  java_lang_Runtime.rs  java_lang_String.rs  java_lang_System.rs  java_lang_Thread.rs  java_security_AccessController.rs  java_util_concurrent_atomic_AtomicLong.rs  jni.rs  mod.rs  sun_io_Win32ErrorMode.rs  sun_misc_Signal.rs  sun_misc_Unsafe.rs  sun_misc_VM.rs  sun_reflect_NativeConstructorAccessorImpl.rs  sun_reflect_Reflection.rs
src/object/: array.rs  class.rs  constant_pool.rs  field.rs  hash_table.rs  method.rs  mod.rs  prelude.rs  ptr.rs  string.rs  symbol.rs
src/runtime/: dispatch_instr.rs  frame.rs  interpreter.rs  mod.rs  stack.rs
src/utils/: mod.rs
tests/classes/rsvm/: HelloRSVM.java  MethodCall.java
