[package]
name = "rsvm"
version = "0.1.0"
authors = ["hanakeichen <hanakeichen@outlook.com>"]
edition = "2021"

[profile.dev]
overflow-checks = false

[dependencies]
libc = "0.2"
rand = "0.8.5"
paste = "1.0.14"
parking_lot = "0.12.3"
log = "0.4.22"
jni = "0.21.1"
zip = { version = "=0.6.6" }
libloading = "0.8.5"

clap = { version = "=4.3.24", features = ["derive"], optional = true }
env_logger = { version = "0.11.5", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["sysinfoapi", "memoryapi", "errhandlingapi"] }

[build-dependencies]
rsvm_zip = { path = "lib/rsvm_zip", artifact = "cdylib", target = "target" }

[lib]
name = "rsvm"
path = "src/lib.rs"

[features]
default = ["build-rava"]
build-rava = ["clap", "env_logger" ]

[[bin]]
name = "rava"
path = "src/rava.rs"
required-features = ["build-rava"]
